fix z-index

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -42,14 +42,7 @@ main {
   margin-top: 10vh;
 }
 
-#dunce {
-  height: 50vh;
-}
-#rufus {
-  height: 70vh;
-}
-
-h1{
+h1 {
   font-size: 3.6vw;
 }
 
